# src/application/posts/commands/update-post/update-post-command-validator.ts
@@ -1,0 +1,17 @@
+import * as Yup from 'yup';
+import { ValidationException } from '@application/common/exceptions';
+import { UpdatePostCommand } from './update-post-command';
+
+export async function validate(command: UpdatePostCommand) {
+  try {
+    const schema: Yup.SchemaOf<UpdatePostCommand> = Yup.object().shape({
+      id: Yup.number().required(),
+      published: Yup.boolean().optional(),
+      title: Yup.string().min(1).optional(),
+    });
+
+    await schema.validate(command, { abortEarly: false, strict: true });
+  } catch (error) {
+    throw new ValidationException(error as Yup.ValidationError);
+  }
+}
